Closed Bug 1624105 Opened 5 years ago Closed 5 years ago

We don't try to activate Http3Stream again if it failed once.

Categories

(Core :: Networking: HTTP, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox76 --- fixed

People

(Reporter: michal, Assigned: michal)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

No description provided.
Pushed by mnovotny@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f790f3cb89b4 We don't try to activate Http3Stream again if it failed once r=dragana
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Regressions: 1648553
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: