Bug 1624105 - We don't try to activate Http3Stream again if it failed once r=dragana

Differential Revision: https://phabricator.services.mozilla.com/D67733